--- a/configs/init/init.exynos2100.rc
+++ b/configs/init/init.exynos2100.rc
@@ -697,7 +697,7 @@ on boot
     chmod 0664 /dev/cpuset/abnormal/cpus
 
     mkdir /dev/cpuset/moderate
-    write /dev/cpuset/moderate/cpus 0-2,4-6
+    write /dev/cpuset/moderate/cpus 0-2
     copy /dev/cpuset/mems /dev/cpuset/moderate/mems
 
     chown system system /dev/cpuset/moderate
@@ -1004,4 +1004,4 @@ service watchdogd /system/bin/watchdogd 10 30
     seclabel u:r:watchdogd:s0
 
 on property:sys.boot_completed=1
-    restart vendor.sensors-hal-2-1-multihal
+    restart vendor.sensors-hal-multihal
