universal2100-common: Move to AOSP NXP NFC HAL

--- a/configs/init/init.exynos2100.rc
+++ b/configs/init/init.exynos2100.rc
@@ -1003,5 +1003,17 @@ service watchdogd /system/bin/watchdogd 10 30
     priority -10
     seclabel u:r:watchdogd:s0
 
+service vendor.nfc_hal_service /vendor/bin/hw/android.hardware.nfc_snxxx@1.2-service
+    override
+    class hal
+    user nfc
+    group nfc
+
+service vendor.secure_element_hal_service /vendor/bin/hw/android.hardware.secure_element_snxxx@1.2-service
+    override
+    class hal
+    user secure_element
+    group secure_element
+
 on property:sys.boot_completed=1
     restart vendor.sensors-hal-multihal
